fix tile overflow issue

--- a/components/carousel/carousel.css
+++ b/components/carousel/carousel.css
@@ -145,6 +145,7 @@ body {
         display: flex;
         height: 100%;
         width: 100%;
+        transform: translate3d(0px, 0px, 0px);
     }
 
     .transition-effect {
